--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tsparticles/engine": "^3.9.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.9.1",
+    "@types/aos": "^3.0.7",
     "aos": "^2.3.4",
     "next": "15.4.6",
     "react": "19.1.0",
